--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@gokiprotocol/walletkit": "^1.7.3",
-    "@hamsterbox/ui-kit": "^0.6.2",
+    "@hamsterbox/ui-kit": "^0.6.3",
     "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
     "@project-serum/anchor": "^0.25.0",
     "@project-serum/sol-wallet-adapter": "^0.2.6",
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@reach/dialog": "^0.17.0",
     "@reduxjs/toolkit": "^1.8.0",
     "@saberhq/solana-contrib": "^1.13.19",
@@ -51,6 +52,7 @@
     "husky": "^8.0.1",
     "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.2.1",
     "moment": "^2.29.4",
     "moralis-v1": "^1.12.0",
     "next": "^13.0.6",
@@ -84,6 +86,7 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.2.0",
     "@types/node": "17.0.21",
     "@types/react": "^18.0.25",
     "@types/react-collapse": "^5.0.1",
