--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^1.0.0",
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
+    "chart.js": "^4.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
@@ -64,10 +65,12 @@
     "polished": "^4.2.2",
     "qs": "^6.11.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-collapse": "^5.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-flickity-component": "^3.6.3",
+    "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
     "react-moralis": "^1.4.2",
     "react-redux": "^7.2.6",
@@ -85,6 +88,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/chart.js": "^2.9.37",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.2.0",
     "@types/node": "17.0.21",
