--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chart.js": "^4.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "eventemitter3": "^4.0.7",
     "firebase": "^9.14.0",
