--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "buffer": "^6.0.3",
     "chart.js": "^4.2.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "eventemitter3": "^4.0.7",
@@ -80,6 +80,7 @@
     "react-step-progress": "^1.0.3",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
+    "reflect-metadata": "^0.1.13",
     "tiny-invariant": "^1.2.0",
     "tw-elements": "^1.0.0-alpha12",
     "tweetnacl": "^1.0.3",
