--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "flickity": "^2.3.0",
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
+    "framer-motion": "^9.1.7",
     "husky": "^8.0.1",
     "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
@@ -72,6 +73,7 @@
     "react-dom": "^18.2.0",
     "react-flickity-component": "^3.6.3",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
     "react-lottie": "^1.2.3",
     "react-moralis": "^1.4.2",
     "react-redux": "^7.2.6",
