--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 API_URL=https://dev-pocket.hamsterbox.xyz
 HOST_NAME=https://dev-p2p.hamsterbox.xyz
-SWAP_PROGRAM_ADDRESS=EdeRcNsVGU1s1NXZZo8FhLD8iePxvoUCdbvwVGnj778f
-SOLANA_CLUSTER=mainnet-beta
+SWAP_PROGRAM_ADDRESS=DL1BQwRmN4Ye4fsmDnPipNrm1XU24x8yDU7c5Ltsqvvc
+SOLANA_CLUSTER=devnet
 SOLANA_RPC_URL=https://boldest-few-field.solana-mainnet.quiknode.pro/0ffa9f9f5e9141aa33a030081b78fdfe40bfbae6/
