--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "luxon": "^3.2.1",
     "moment": "^2.29.4",
     "moralis-v1": "^1.12.0",
-    "next": "^13.0.6",
+    "next": "^13.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
@@ -82,6 +82,7 @@
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "reflect-metadata": "^0.1.13",
+    "swr": "^2.0.4",
     "tiny-invariant": "^1.2.0",
     "tw-elements": "^1.0.0-alpha12",
     "tweetnacl": "^1.0.3",
