--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@gokiprotocol/walletkit": "^1.7.3",
     "@hamsterbox/ui-kit": "^0.6.3",
     "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
+    "@next-static/image": "^0.0.10",
     "@project-serum/anchor": "^0.25.0",
     "@project-serum/sol-wallet-adapter": "^0.2.6",
     "@ramonak/react-progress-bar": "^5.0.3",
