--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 API_URL=https://pocket.hamsterbox.xyz/be
-HOST_NAME=https://pocket.hamsterbox.xyz/be
+HOST_NAME=https://pocket.hamsterbox.xyz/
 SWAP_PROGRAM_ADDRESS=BW5RwMCPY85ch6efYE3Ev43ZQpJytvvjSNbJ2beC9MzV
 SOLANA_CLUSTER=mainnet-beta
 SOLANA_RPC_URL=https://boldest-few-field.solana-mainnet.quiknode.pro/0ffa9f9f5e9141aa33a030081b78fdfe40bfbae6/
