feat: enabled domain rpc

--- a/.env.dev
+++ b/.env.dev
@@ -2,4 +2,4 @@ API_URL=https://dev-pocket.hamsterbox.xyz/be
 HOST_NAME=https://dev-pocket.hamsterbox.xyz/be
 SWAP_PROGRAM_ADDRESS=BW5RwMCPY85ch6efYE3Ev43ZQpJytvvjSNbJ2beC9MzV
 SOLANA_CLUSTER=mainnet-beta
-SOLANA_RPC_URL=https://boldest-few-field.solana-mainnet.quiknode.pro/0ffa9f9f5e9141aa33a030081b78fdfe40bfbae6/
+SOLANA_RPC_URL=https://solana-rpc.hamsterbox.xyz/
