--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,4 @@ SOLANA_RPC_URL=https://solana-rpc.hamsterbox.xyz/
 ALCHEMY_ID=WX4RkczepQqD3ADlHHJfaHz6IFAJEmkQ
 WALLET_CONNECT_PROJECT_ID=90d9ea592d35cf1b397555a8f777b6e2
 EVM_CHAIN_ID=matic
+EVM_CONTRACT_ADDRESS=0x9ac25725B8465E70cc2458592C9104c0f06C8e87
