--- a/.env.dev
+++ b/.env.dev
@@ -5,6 +5,6 @@ SOLANA_CLUSTER=mainnet-beta
 SOLANA_RPC_URL=https://solana-rpc.hamsterbox.xyz/
 ALCHEMY_ID=WX4RkczepQqD3ADlHHJfaHz6IFAJEmkQ
 WALLET_CONNECT_PROJECT_ID=90d9ea592d35cf1b397555a8f777b6e2
-EVM_CHAIN_ID=matic
-EVM_CONTRACT_ADDRESS=0x9ac25725B8465E70cc2458592C9104c0f06C8e87
+EVM_CHAIN_ID=bsc
+EVM_CONTRACT_ADDRESS=0x8500d55F0f49FFfA33cCBdbcF171eD50a7bcA26E
 EVM_REGISTRY_ADDRESS=0x4d5860f437692Bf7a60acf88BAdB328a8E5b18bc
