--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ethersproject/abstract-provider": "^5.7.0",
     "@gokiprotocol/walletkit": "^1.7.3",
     "@hamsterbox/ui-kit": "^0.6.3",
+    "@manahippo/aptos-wallet-adapter": "^1.0.10",
     "@material-ui/core": "^4.12.4",
     "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
     "@mui/material": "^5.12.0",
