--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
+    "@pontem/aptos-wallet-adapter": "^0.9.0",
     "@project-serum/anchor": "^0.25.0",
     "@project-serum/sol-wallet-adapter": "^0.2.6",
     "@rainbow-me/rainbowkit": "^0.12.12",
