--- a/.env.prod
+++ b/.env.prod
@@ -8,4 +8,4 @@ WALLET_CONNECT_PROJECT_ID=90d9ea592d35cf1b397555a8f777b6e2
 EVM_CHAIN_ID=bsc
 EVM_CONTRACT_ADDRESS=0x8500d55F0f49FFfA33cCBdbcF171eD50a7bcA26E
 EVM_REGISTRY_ADDRESS=0x4d5860f437692Bf7a60acf88BAdB328a8E5b18bc
-APTOS_NODE_URL=https://fullnode.testnet.aptoslabs.com
+APTOS_NODE_URL=https://fullnode.mainnet.aptoslabs.com
