chore: auto lint on build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "eslint-check": "eslint --print-config path/to/main.js | eslint-config-prettier-check",
     "format": "prettier --write ./**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint \"**/*.ts\" \"**/*.tsx\" --fix",
+    "lint": "eslint \"**/*.ts\" \"**/*.tsx\" --fix",
     "pre-commit": "npm run lint",
     "prepare": "husky install",
     "dev:prod-env": "NODE_ENV=prod next dev",
@@ -123,22 +123,22 @@
     "@types/react-copy-to-clipboard": "5.0.4",
     "@types/react-lottie": "1.2.6",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.30.7",
-    "@typescript-eslint/parser": "5.30.7",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
     "autoprefixer": "10.4.2",
     "babel-plugin-styled-components": "2.0.7",
     "bs58": "5.0.0",
-    "eslint": "8.10.0",
-    "eslint-config-next": "13.0.6",
-    "eslint-config-prettier": "8.5.0",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.9",
+    "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react": "7.32.2",
     "file-loader": "6.2.0",
     "husky": "8.0.0",
     "postcss": "8.4.8",
     "prettier": "2.7.1",
     "sass": "1.49.9",
     "tailwindcss": "3.3.2",
-    "typescript": "4.6.2"
+    "typescript": "5.1.6"
   }
 }
