--- a/.eslintignore
+++ b/.eslintignore
@@ -4,8 +4,7 @@ node_modules
 **/dist/**
 client/dist/
 node_modules/*
-./node_modules/@wagmi/*
-./src/providers/program/evm/typechain-types
-./src/providers/program/evm/artifacts
-node_modules/@wagmi/**
-node_module/abitype/d/**"
+node_modules/@wagmi/*
+src/providers/program/evm/typechain-types
+src/providers/program/evm/artifacts
+node_module/abitype/d/*
