--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "chart.js": "4.2.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "classnames": "2.3.2",
+    "classnames": "^2.3.2",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
     "ethers": "5.6.9",
