chore: improve deps

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "chart.js": "4.2.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "classnames": "^2.3.2",
+    "classnames": "2.3.2",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
     "ethers": "5.6.9",
@@ -76,12 +76,12 @@
     "moralis-v1": "1.12.0",
     "next": "13.4.9",
     "next-compose-plugins": "2.2.1",
-    "next-pwa": "^5.6.0",
+    "next-pwa": "5.6.0",
     "next-seo": "5.15.0",
     "next-themes": "0.2.1",
     "next-transpile-modules": "10.0.0",
     "polished": "4.2.2",
-    "ps": "^1.0.0",
+    "ps": "1.0.0",
     "qs": "6.11.2",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
