--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "autoprefixer": "10.4.2",
     "babel-plugin-styled-components": "2.0.7",
     "bs58": "5.0.0",
-    "encoding": "^0.1.13",
+    "encoding": "0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-prettier": "8.8.0",
