--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "husky": "8.0.1",
     "js-big-decimal": "1.4.1",
     "jsbi": "4.3.0",
+    "keccak": "^3.0.3",
     "lodash": "4.17.21",
     "luxon": "3.2.1",
     "moment": "2.29.4",
