--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@craco/craco": "6.4.3",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
+    "@ethereumjs/util": "^8.1.0",
     "@ethersproject/abstract-provider": "5.7.0",
     "@gokiprotocol/walletkit": "1.7.3",
     "@hamsterbox/ui-kit": "0.6.3",
@@ -59,6 +60,7 @@
     "classnames": "2.3.2",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
+    "ethereum-cryptography": "^2.1.0",
     "ethers": "5.6.9",
     "eventemitter3": "4.0.7",
     "firebase": "9.14.0",
