--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@saberhq/use-solana": "1.13.19",
     "@solana/spl-token": "0.3.6",
     "@solana/wallet-adapter-react": "0.15.25",
-    "@solana/wallet-adapter-wallets": "0.19.6",
+    "@solana/wallet-adapter-torus": "^0.11.27",
+    "@solana/wallet-adapter-wallets": "^0.19.18",
     "@solana/web3.js": "1.78.0",
     "@typechain/hardhat": "6.1.2",
     "@types/bn.js": "5.1.0",
