chore: fixed deps

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@craco/craco": "6.4.3",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "@ethereumjs/util": "^8.1.0",
+    "@ethereumjs/util": "8.1.0",
     "@ethersproject/abstract-provider": "5.7.0",
     "@gokiprotocol/walletkit": "1.7.3",
     "@hamsterbox/ui-kit": "0.6.3",
@@ -45,8 +45,8 @@
     "@saberhq/use-solana": "1.13.19",
     "@solana/spl-token": "0.3.6",
     "@solana/wallet-adapter-react": "0.15.25",
-    "@solana/wallet-adapter-torus": "^0.11.27",
-    "@solana/wallet-adapter-wallets": "^0.19.18",
+    "@solana/wallet-adapter-torus": "0.11.24",
+    "@solana/wallet-adapter-wallets": "0.19.6",
     "@solana/web3.js": "1.78.0",
     "@typechain/hardhat": "6.1.2",
     "@types/bn.js": "5.1.0",
@@ -61,7 +61,7 @@
     "classnames": "2.3.2",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
-    "ethereum-cryptography": "^2.1.0",
+    "ethereum-cryptography": "2.1.0",
     "ethers": "5.6.9",
     "eventemitter3": "4.0.7",
     "firebase": "9.14.0",
@@ -73,7 +73,7 @@
     "husky": "8.0.1",
     "js-big-decimal": "1.4.1",
     "jsbi": "4.3.0",
-    "keccak": "^3.0.3",
+    "keccak": "3.0.3",
     "lodash": "4.17.21",
     "luxon": "3.2.1",
     "moment": "2.29.4",
@@ -140,7 +140,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "file-loader": "6.2.0",
-    "husky": "8.0.0",
+    "husky": "8.0.1",
     "postcss": "8.4.8",
     "prettier": "2.7.1",
     "sass": "1.49.9",
