--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "classnames": "2.3.2",
+    "dayjs": "^1.11.9",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
     "ethereum-cryptography": "2.1.0",
