--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:dev-env": "NODE_ENV=dev next build"
   },
   "dependencies": {
+    "@ant-design/icons": "5.1.4",
     "@craco/craco": "6.4.3",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
@@ -39,6 +40,7 @@
     "@rainbow-me/rainbowkit": "0.12.17",
     "@ramonak/react-progress-bar": "5.0.3",
     "@reach/dialog": "0.17.0",
+    "@react-spring/shared": "9.7.3",
     "@reduxjs/toolkit": "1.8.0",
     "@saberhq/solana-contrib": "1.13.19",
     "@saberhq/token-utils": "1.13.19",
@@ -51,7 +53,9 @@
     "@typechain/hardhat": "6.1.2",
     "@types/bn.js": "5.1.0",
     "@types/react-dom": "18.0.9",
+    "@wagmi/core": "1.3.7",
     "antd": "5.1.6",
+    "aptos": "1.13.1",
     "axios": "1.4.0",
     "bn.js": "5.2.1",
     "buffer": "6.0.3",
@@ -59,7 +63,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "classnames": "2.3.2",
-    "dayjs": "^1.11.9",
+    "dayjs": "1.11.9",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
     "ethereum-cryptography": "2.1.0",
