--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "next-themes": "0.2.1",
     "next-transpile-modules": "10.0.0",
     "polished": "4.2.2",
+    "prop-types": "^15.8.1",
     "ps": "1.0.0",
     "qs": "6.11.2",
     "react": "18.2.0",
