--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "dayjs": "1.11.9",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
-    "ethereum-cryptography": "2.1.0",
+    "ethereum-cryptography": "0.1.3",
     "ethers": "5.6.9",
     "eventemitter3": "4.0.7",
     "firebase": "9.14.0",
@@ -122,6 +122,7 @@
     "wagmi": "0.12.18"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.22.6",
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
     "@nomicfoundation/hardhat-chai-matchers": "1.0.2",
