--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@craco/craco": "6.4.3",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "@ethereumjs/util": "8.1.0",
     "@ethersproject/abstract-provider": "5.7.0",
     "@gokiprotocol/walletkit": "1.7.3",
     "@hamsterbox/ui-kit": "0.6.3",
@@ -69,6 +68,7 @@
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
     "ethereum-cryptography": "0.1.3",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "5.6.9",
     "eventemitter3": "4.0.7",
     "firebase": "9.14.0",
