--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@ant-design/cssinjs": "1.11.1",
     "@ant-design/icons": "5.1.4",
-    "@craco/craco": "6.4.3",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
     "@ethersproject/abstract-provider": "5.7.0",
@@ -28,7 +27,6 @@
     "@manahippo/aptos-wallet-adapter": "1.0.10",
     "@material-ui/core": "4.12.4",
     "@metaplex-foundation/mpl-token-metadata": "2.5.2",
-    "@mui/material": "5.12.0",
     "@next-static/image": "0.0.10",
     "@nomicfoundation/solidity-analyzer": "0.1.1",
     "@openzeppelin/contracts": "4.7.3",
@@ -52,8 +50,6 @@
     "@solana/wallet-adapter-wallets": "0.19.6",
     "@solana/web3.js": "1.78.0",
     "@typechain/hardhat": "6.1.2",
-    "@types/bn.js": "5.1.0",
-    "@types/react-dom": "18.0.9",
     "antd": "5.1.6",
     "aptos": "1.13.1",
     "axios": "1.4.0",
@@ -70,7 +66,6 @@
     "ethereumjs-util": "^7.1.5",
     "ethers": "5.6.9",
     "eventemitter3": "4.0.7",
-    "firebase": "9.14.0",
     "flickity": "2.3.0",
     "flowbite": "1.6.2",
     "flowbite-react": "0.3.7",
@@ -115,6 +110,7 @@
     "tiny-invariant": "1.2.0",
     "tw-elements": "1.0.0-alpha12",
     "tweetnacl": "1.0.3",
+    "usehooks-ts": "2.9.1",
     "uuid": "9.0.0",
     "uuidv4": "6.2.13",
     "viem": "0.3.19",
@@ -127,6 +123,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "1.0.2",
     "@nomicfoundation/hardhat-network-helpers": "1.0.3",
     "@nomicfoundation/hardhat-toolbox": "1.0.2",
+    "@types/bn.js": "5.1.0",
     "@types/chart.js": "2.9.37",
     "@types/lodash": "4.14.191",
     "@types/luxon": "3.2.0",
@@ -134,6 +131,7 @@
     "@types/react": "18.0.25",
     "@types/react-collapse": "5.0.1",
     "@types/react-copy-to-clipboard": "5.0.4",
+    "@types/react-dom": "18.0.9",
     "@types/react-lottie": "1.2.6",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.61.0",
