--- a/package.json
+++ b/package.json
@@ -86,8 +86,7 @@
     "next-themes": "0.2.1",
     "next-transpile-modules": "10.0.0",
     "polished": "4.2.2",
-    "prop-types": "^15.8.1",
-    "ps": "1.0.0",
+    "prop-types": "15.8.1",
     "qs": "6.11.2",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
@@ -98,10 +97,8 @@
     "react-icons": "4.9.0",
     "react-intersection-observer": "9.4.3",
     "react-lottie": "1.2.3",
-    "react-moralis": "1.4.2",
     "react-redux": "8.1.1",
     "react-responsive-carousel": "3.2.23",
-    "react-scripts": "5.0.1",
     "react-step-progress": "1.0.3",
     "redux": "4.2.1",
     "redux-saga": "1.2.3",
