chore: fixed deps

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@project-serum/sol-wallet-adapter": "0.2.6",
     "@rainbow-me/rainbowkit": "0.12.17",
     "@ramonak/react-progress-bar": "5.0.3",
+    "@reach/dialog": "0.18.0",
     "@react-spring/shared": "9.7.3",
     "@reduxjs/toolkit": "1.8.0",
     "@saberhq/solana-contrib": "1.13.19",
@@ -42,13 +43,13 @@
     "@saberhq/use-solana": "1.13.19",
     "@solana/spl-token": "0.3.6",
     "@solana/wallet-adapter-base": "0.9.22",
-    "@solana/wallet-adapter-brave": "^0.1.16",
-    "@solana/wallet-adapter-coin98": "^0.5.19",
-    "@solana/wallet-adapter-ledger": "^0.9.24",
-    "@solana/wallet-adapter-phantom": "^0.9.23",
+    "@solana/wallet-adapter-brave": "0.1.16",
+    "@solana/wallet-adapter-coin98": "0.5.19",
+    "@solana/wallet-adapter-ledger": "0.9.24",
+    "@solana/wallet-adapter-phantom": "0.9.23",
     "@solana/wallet-adapter-react": "0.15.25",
-    "@solana/wallet-adapter-solflare": "^0.6.24",
-    "@solana/wallet-adapter-sollet": "^0.11.16",
+    "@solana/wallet-adapter-solflare": "0.6.24",
+    "@solana/wallet-adapter-sollet": "0.11.16",
     "@solana/web3.js": "1.78.0",
     "@typechain/hardhat": "6.1.2",
     "antd": "5.1.6",
@@ -105,7 +106,7 @@
     "wagmi": "0.12.18"
   },
   "devDependencies": {
-    "@babel/runtime": "^7.22.6",
+    "@babel/runtime": "7.22.6",
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
     "@nomicfoundation/hardhat-chai-matchers": "1.0.2",
