chore: improve deps

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@reduxjs/toolkit": "1.8.0",
     "@saberhq/solana-contrib": "1.13.19",
     "@saberhq/token-utils": "1.13.19",
-    "@saberhq/use-solana": "1.13.19",
     "@solana/spl-token": "0.3.6",
     "@solana/wallet-adapter-base": "0.9.22",
     "@solana/wallet-adapter-brave": "0.1.16",
@@ -99,7 +98,7 @@
     "swr": "2.0.4",
     "tw-elements": "1.0.0-alpha12",
     "tweetnacl": "1.0.3",
-    "usehooks-ts": "2.9.1",
+    "usehooks-ts": "^2.9.1",
     "uuid": "9.0.0",
     "uuidv4": "6.2.13",
     "viem": "0.3.19",
