--- a/package.json
+++ b/package.json
@@ -32,23 +32,14 @@
     "@openzeppelin/hardhat-upgrades": "1.20.0",
     "@pontem/aptos-wallet-adapter": "0.9.0",
     "@project-serum/anchor": "0.25.0",
-    "@project-serum/sol-wallet-adapter": "0.2.6",
     "@rainbow-me/rainbowkit": "0.12.17",
     "@ramonak/react-progress-bar": "5.0.3",
     "@reach/dialog": "0.18.0",
     "@react-spring/shared": "9.7.3",
-    "@reduxjs/toolkit": "1.8.0",
-    "@saberhq/solana-contrib": "1.13.19",
-    "@saberhq/token-utils": "1.13.19",
+    "@saberhq/use-solana": "1.14.11",
+    "@saberhq/solana-contrib": "1.14.11",
+    "@saberhq/token-utils": "1.14.11",
     "@solana/spl-token": "0.3.6",
-    "@solana/wallet-adapter-base": "0.9.22",
-    "@solana/wallet-adapter-brave": "0.1.16",
-    "@solana/wallet-adapter-coin98": "0.5.19",
-    "@solana/wallet-adapter-ledger": "0.9.24",
-    "@solana/wallet-adapter-phantom": "0.9.23",
-    "@solana/wallet-adapter-react": "0.15.25",
-    "@solana/wallet-adapter-solflare": "0.6.24",
-    "@solana/wallet-adapter-sollet": "0.11.16",
     "@solana/web3.js": "1.78.0",
     "@typechain/hardhat": "6.1.2",
     "antd": "5.1.6",
@@ -63,7 +54,6 @@
     "dayjs": "1.11.9",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
-    "ethereum-cryptography": "0.1.3",
     "ethers": "5.6.9",
     "eventemitter3": "4.0.7",
     "flickity": "2.3.0",
@@ -75,7 +65,6 @@
     "lodash": "4.17.21",
     "luxon": "3.2.1",
     "next": "13.4.9",
-    "next-pwa": "5.6.0",
     "next-seo": "5.15.0",
     "next-transpile-modules": "10.0.0",
     "prop-types": "15.8.1",
@@ -101,7 +90,6 @@
     "usehooks-ts": "^2.9.1",
     "uuid": "9.0.0",
     "uuidv4": "6.2.13",
-    "viem": "0.3.19",
     "wagmi": "0.12.18"
   },
   "devDependencies": {
