--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "@openzeppelin/hardhat-upgrades": "1.20.0",
     "@pontem/aptos-wallet-adapter": "0.9.0",
     "@project-serum/anchor": "0.25.0",
-    "@rainbow-me/rainbowkit": "0.12.17",
+    "@rainbow-me/rainbowkit": "1.0.7",
     "@ramonak/react-progress-bar": "5.0.3",
     "@reach/dialog": "0.18.0",
     "@react-spring/shared": "9.7.3",
-    "@saberhq/use-solana": "1.14.11",
     "@saberhq/solana-contrib": "1.14.11",
     "@saberhq/token-utils": "1.14.11",
+    "@saberhq/use-solana": "1.14.11",
     "@solana/spl-token": "0.3.6",
     "@solana/web3.js": "1.78.0",
     "@typechain/hardhat": "6.1.2",
@@ -53,7 +53,7 @@
     "dayjs": "1.11.9",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
-    "ethers": "5.6.9",
+    "ethers": "6.6.6",
     "eventemitter3": "4.0.7",
     "flickity": "2.3.0",
     "flowbite": "1.6.2",
@@ -89,7 +89,8 @@
     "usehooks-ts": "^2.9.1",
     "uuid": "9.0.0",
     "uuidv4": "6.2.13",
-    "wagmi": "0.12.18"
+    "viem": "^1.15.1",
+    "wagmi": "^1.4.3"
   },
   "devDependencies": {
     "@commitlint/cli": "17.1.2",
