--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "next-transpile-modules": "10.0.0",
     "prop-types": "15.8.1",
     "qs": "6.11.2",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-collapse": "5.1.1",
@@ -103,6 +104,7 @@
     "@types/lodash": "4.14.191",
     "@types/luxon": "3.2.0",
     "@types/node": "17.0.21",
+    "@types/qs": "^6.9.8",
     "@types/react": "18.0.25",
     "@types/react-collapse": "5.0.1",
     "@types/react-copy-to-clipboard": "5.0.4",
