chore: clean up

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@openzeppelin/hardhat-upgrades": "1.20.0",
     "@pontem/aptos-wallet-adapter": "0.9.0",
     "@project-serum/anchor": "0.25.0",
-    "@rainbow-me/rainbowkit": "1.0.7",
+    "@rainbow-me/rainbowkit": "1.0.12",
     "@ramonak/react-progress-bar": "5.0.3",
     "@reach/dialog": "0.18.0",
     "@react-spring/shared": "9.7.3",
@@ -53,13 +53,14 @@
     "dayjs": "1.11.9",
     "decimal.js": "10.4.3",
     "dotenv": "16.0.3",
-    "ethers": "6.6.6",
+    "ethers": "6.7.1",
     "eventemitter3": "4.0.7",
     "flickity": "2.3.0",
     "flowbite": "1.6.2",
     "flowbite-react": "0.3.7",
     "fs": "0.0.1-security",
     "hardhat": "2.12.6",
+    "i18n-js": "^4.3.2",
     "js-big-decimal": "1.4.1",
     "lodash": "4.17.21",
     "luxon": "3.2.1",
@@ -90,8 +91,8 @@
     "usehooks-ts": "^2.9.1",
     "uuid": "9.0.0",
     "uuidv4": "6.2.13",
-    "viem": "^1.15.1",
-    "wagmi": "^1.4.3"
+    "viem": "1.15.4",
+    "wagmi": "1.4.3"
   },
   "devDependencies": {
     "@commitlint/cli": "17.1.2",
