chore: improve deps

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@emotion/styled": "11.8.1",
     "@ethersproject/abstract-provider": "5.7.0",
     "@gokiprotocol/walletkit": "1.7.3",
-    "@hamsterbox/ui-kit": "^1.0.0",
+    "@hamsterbox/ui-kit": "1.0.0",
     "@manahippo/aptos-wallet-adapter": "1.0.10",
     "@metaplex-foundation/mpl-token-metadata": "2.5.2",
     "@openzeppelin/contracts": "4.7.3",
@@ -60,7 +60,7 @@
     "flowbite-react": "0.3.7",
     "fs": "0.0.1-security",
     "hardhat": "2.12.6",
-    "i18n-js": "^4.3.2",
+    "i18n-js": "4.3.2",
     "js-big-decimal": "1.4.1",
     "lodash": "4.17.21",
     "luxon": "3.2.1",
@@ -69,7 +69,7 @@
     "next-transpile-modules": "10.0.0",
     "prop-types": "15.8.1",
     "qs": "6.11.2",
-    "query-string": "^8.1.0",
+    "query-string": "8.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-collapse": "5.1.1",
@@ -88,7 +88,7 @@
     "swr": "2.0.4",
     "tw-elements": "1.0.0-alpha12",
     "tweetnacl": "1.0.3",
-    "usehooks-ts": "^2.9.1",
+    "usehooks-ts": "2.9.1",
     "uuid": "9.0.0",
     "uuidv4": "6.2.13",
     "viem": "1.15.4",
@@ -105,7 +105,7 @@
     "@types/lodash": "4.14.191",
     "@types/luxon": "3.2.0",
     "@types/node": "17.0.21",
-    "@types/qs": "^6.9.8",
+    "@types/qs": "6.9.8",
     "@types/react": "18.0.25",
     "@types/react-collapse": "5.0.1",
     "@types/react-copy-to-clipboard": "5.0.4",
