--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "class-validator": "0.14.0",
     "classnames": "2.3.2",
     "dayjs": "1.11.9",
-    "decimal.js": "10.4.3",
+    "decimal.js": "^10.4.3",
     "dotenv": "16.0.3",
     "ethers": "6.7.1",
     "eventemitter3": "4.0.7",
